[package]
name = "raytrace"
version = "0.1.0"
authors = ["asquared31415 <34665709+asquared31415@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.6"
rand = "0.7.3"
rayon = "1.3.1"